<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical"
  android:paddingStart="20dp"
  android:paddingEnd="20dp">

  <EditText
    android:id="@+id/emailInput"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:hint="@string/email_input_hint"
    android:inputType="textEmailAddress"
    android:textSize="18sp" />

  <EditText
    android:id="@+id/passwordInput"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/password_input_hint"
    android:inputType="textPassword"
    android:textSize="18sp" />

  <Button
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:background="@color/colorPrimary"
    android:text="@string/login_button_text"
    android:textAllCaps="false"
    android:textColor="@color/white"
    android:textSize="18sp" />

  <TextView
    android:id="@+id/errorText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_margins"
    android:textColor="@color/errorColor"
    android:visibility="gone"
    android:text="@string/invalid_data"
    tools:visibility="visible" />

  <TextView
    android:id="@+id/notRegistered"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/no_account_text" />

  <TextView
    android:id="@+id/register"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/register_label"
    android:textSize="18sp" />

</LinearLayout>